--- a/metier tisser orange.html
+++ b/metier tisser orange.html
@@ -59,13 +59,13 @@
 	<p>Tendre les fils entre les deux premières dents, contourner la deuxième en tirant sur le fils.</p>
 	<p>Continuer pour obtenir une surface de fils parallèles et bien tendus.</p>
 	<h2>Le tissage</h2>
-	<img src='metier-tisser-orange-travail.bmp'>
+	<img src='metier-tisser-orange-travail.gif'>
 	<p>Fixer un nouveau fils de laine double.</p>
 	<p>A l'aide d'un crochet, passer le nouveau fils entre ceux précedement montés. Un dessus, un dessous.</p>
 	<p>Quand le crochet devient difficile à manier, utiliser une épingle à cheveux ou une aiguille à tapisserie.</p>
 	<p>Ré-ajuster au doigt la position des fils tissés.</p>
 	<h2>La finition</h2>
-	<img src='metier-tisser-orange-finition.bmp'>
+	<img src='metier-tisser-orange-finition.gif'>
 	<p>Partir d'un coin du métier.</p>
 	<p>A l'aide d'une aiguille à tapisserie, libérer le fils enroulé autour de la dent.</p>
 	<p>Une fois la seconde maille libérée, les relier par un point de coté.</p>
