--- a/model-css basique/page-form.html
+++ b/model-css basique/page-form.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html><html><head>
+	<title>formulaire - notes de css</title>
+	<meta name='viewport' content='width=device-width,initial-scale=1'/>
+	<meta charset='utf-8'/>
+	<link rel='icon' type='image/x-icon' href='../../site-dp/data/nounours-perso.svg'/>
+	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/structure.css'/>
+	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/perso.css' media='screen'/>
+	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/shapes.css'/>
+	<link rel='stylesheet' type='text/css' href='base.css'/>
 <style type='text/css'>
 	fieldset.table {
 		display: grid;
@@ -5,7 +14,7 @@
 		border-bottom: dashed 2px var(--button-bg);
 		margin-bottom: 1em;
 	}
-</style><section>
+</style></head><body>
 	<h2>les formulaires</h2>
 	<form method='get' action=none>
 		<p>les attributs name et value permettent de traiter les données du formulaire.</p>
@@ -40,4 +49,5 @@
 			<p>input:hover {background-color: #399; } input { border: solid 2px orange; outline: solid 4px #6F6; } outline est une sorte de border autour des input, button, select, textarea.</p>
 		</fieldset>
 	</form>
-</section>
+	<a href='index.html'>revenir au sommaire</a>
+</body></html>
