--- a/model-css basique/page-grid.html
+++ b/model-css basique/page-grid.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html><html><head>
+	<title>grid - notes de css</title>
+	<meta name='viewport' content='width=device-width,initial-scale=1'/>
+	<meta charset='utf-8'/>
+	<link rel='icon' type='image/x-icon' href='../../site-dp/data/nounours-perso.svg'/>
+	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/structure.css'/>
+	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/perso.css' media='screen'/>
+	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/shapes.css'/>
+	<link rel='stylesheet' type='text/css' href='base.css'/>
 <style type='text/css'>
 	div {
 		display: grid;
@@ -11,9 +20,8 @@
 		border: solid 6px var(--button-bg-hover);
 		margin: 0;
 	}
-</style>
-<section>
-	<h2>grid</h2>
+</style></head><body>
+	<h2>framework grid</h2>
 	<div><p></p><p></p><p></p><p></p><p></p><p></p></div>
 	<xmp>div {
 	display: grid;
@@ -31,4 +39,5 @@
 	<p>pour le conteneur: grid-template-areas: "a a b" "c c b"; pour les carrés: grid-area: a;</p>
 	<div><p style='grid-column:1/4'></p><p></p><p></p><p></p><p></p><p></p></div>
 	<p>pour un carré: grid-column: 1/4; grid-column-start + grid-column-end. également avec row.</p>
-</section>
+	<a href='index.html'>revenir au sommaire</a>
+</body></html>
