--- a/model-css basique/page-math.html
+++ b/model-css basique/page-math.html
@@ -1,10 +1,19 @@
+<!DOCTYPE html><html><head>
+	<title>math ml - notes de css</title>
+	<meta name='viewport' content='width=device-width,initial-scale=1'/>
+	<meta charset='utf-8'/>
+	<link rel='icon' type='image/x-icon' href='../../site-dp/data/nounours-perso.svg'/>
+	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/structure.css'/>
+	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/perso.css' media='screen'/>
+	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/shapes.css'/>
+	<link rel='stylesheet' type='text/css' href='base.css'/>
 <style type='text/css'>
 	math {
 		display: block;
 		padding: 1em;
 		margin-bottom: 1em;
 	}
-</style><section class='list3'>
+</style></head><body class='list3'>
 	<h2>math ml</h2>
 	<a href='https://developer.mozilla.org/fr/docs/Web/MathML/Element/math'>source</a>
 	<p>un mrow représente une expression. ici, j'ai rangé chaque équation dans sa propre balise math, mais je peux en mettre plusieurs dans la même balise.</p>
@@ -37,4 +46,5 @@
 		<mrow><mn>2</mn><mo>&InvisibleTimes;</mo><mi>c</mi></mrow>
 		<mrow><mn>4</mn><mo>&InvisibleTimes;</mo><mi>d</mi></mrow>
 	</msubsup></mrow></math>
-</section>
+	<a href='index.html'>revenir au sommaire</a>
+</body></html>
