--- a/model-css basique/page-shape.html
+++ b/model-css basique/page-shape.html
@@ -1,5 +1,13 @@
-<style type='text/css'>
-</style><section class='list3'>
+<!DOCTYPE html><html><head>
+	<title>forme - notes de css</title>
+	<meta name='viewport' content='width=device-width,initial-scale=1'/>
+	<meta charset='utf-8'/>
+	<link rel='icon' type='image/x-icon' href='../../site-dp/data/nounours-perso.svg'/>
+	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/structure.css'/>
+	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/perso.css' media='screen'/>
+	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/shapes.css'/>
+	<link rel='stylesheet' type='text/css' href='base.css'/>
+</head><body class='list3'>
 	<h2>les formes</h2>
 	<div><p>.shape .heart</p><p class='shape heart'></p></div>
 	<div><p>.shape .cloud</p><p class='shape cloud'></p></div>
@@ -11,4 +19,5 @@
 	<div><p>cylindre</p><cylindre><p></p><p></p></cylindre></div>
 	<div><p>cylindre.horizontal</p><cylindre class='horizontal'><p></p><p></p></cylindre></div>
 	<div><p>cylindre.tourne</p><cylindre class='tourne'><p></p><p></p></cylindre></div>
-</section>
+	<a href='index.html'>revenir au sommaire</a>
+</body></html>
