--- a/model-css/page-back.html
+++ b/model-css/page-back.html
@@ -1,15 +1,3 @@
-<!DOCTYPE html><html><head>
-	<title>animation - notes de css</title>
-	<meta name='viewport' content='width=device-width,initial-scale=1'/>
-	<meta charset='utf-8'/>
-	<link rel='import' type='text/css' href='page-back.html'/>
-	<link rel='icon' type='image/x-icon' href='../../site-dp/data/nounours-perso.svg'/>
-	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/structure.css'/>
-	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/perso.css' media='screen'/>
-	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/shapes.css'/>
-	<link rel='stylesheet' type='text/css' href='base.css'/>
-	<script type='text/javascript' src='../../site-dp/library-js-ext/angular.js'></script>
-	<script type='text/javascript' src='../../site-dp/library-js-ext/angular-ui-router.js'></script>
 <style type='text/css'>
 	section p {
 		height: 6em;
@@ -19,7 +7,7 @@
 	p.svg {
 		background-image: url("data:image/svg+xml;utf8,<svg viewBox='0 0 400 100' xmlns='http://www.w3.org/2000/svg' preserveAspectRatio='none' fill='lightgreen' stroke-width='2mm'><polygon points='50,0 350,0 400,50 350,100 50,100 0,50'/></svg>");
 	}
-</style><body class='bord list2'>
+</style><section class='bord list2'>
 	<h2>les fonds</h2>
 	<p style='background-color:orange'>background-color: orange;</p>
 	<p style='background-color:transparent'>background-color: transparent;</p>
@@ -46,4 +34,4 @@
 	<p class='img' style='background-size:contain'>background-image: url(...);<br>background-size: contain;</p>
 	<p class='svg'>background-image: url("data:image/svg+xml;utf8,< svg >...< /svg>")</p>
 	<p class='info'>les variables css ne sont pas prises en compte, ainsi que les valeurs d'un css externe.</p>
-</body></html>
+</section>
