--- a/model-css/page-flex.html
+++ b/model-css/page-flex.html
@@ -1,17 +1,4 @@
-<!DOCTYPE html><html><head>
-	<title>animation - notes de css</title>
-	<meta name='viewport' content='width=device-width,initial-scale=1'/>
-	<meta charset='utf-8'/>
-	<link rel='import' type='text/css' href='page-back.html'/>
-	<link rel='icon' type='image/x-icon' href='../../site-dp/data/nounours-perso.svg'/>
-	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/structure.css'/>
-	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/perso.css' media='screen'/>
-	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/shapes.css'/>
-	<link rel='stylesheet' type='text/css' href='base.css'/>
-	<script type='text/javascript' src='../../site-dp/library-js-ext/angular.js'></script>
-	<script type='text/javascript' src='../../site-dp/library-js-ext/angular-ui-router.js'></script>
 <style type='text/css'>
-	* { background-color: red; }
 	div {
 		display: flex;
 		flex-direction: row;
@@ -36,7 +23,7 @@
 		height: none;
 	}
 	div.grow p { flex-grow: 1; }
-</style></head><body>
+</style><section>
 	<h2>flex-box</h2>
 	<div><p></p><p></p><p></p><p></p><p></p><p></p></div>
 	<xmp>div {
@@ -63,4 +50,4 @@
 	<p>flex-direction: column; flex-wrap: wrap; également wrap-reverse.</p>
 	<div><p></p><p></p><p></p><p></p><p></p><p style='height:1em;align-self:flex-end'></p></div>
 	<p>align-self: flex-end; pour un carré interne ayant une hauteur.</p>
-</body></html>
+</section>
