--- a/model-css basique/page-flex.html
+++ b/model-css basique/page-flex.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html><html><head>
+	<title>flex - notes de css</title>
+	<meta name='viewport' content='width=device-width,initial-scale=1'/>
+	<meta charset='utf-8'/>
+	<link rel='icon' type='image/x-icon' href='../../site-dp/data/nounours-perso.svg'/>
+	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/structure.css'/>
+	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/perso.css' media='screen'/>
+	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/shapes.css'/>
+	<link rel='stylesheet' type='text/css' href='base.css'/>
 <style type='text/css'>
 	div {
 		display: flex;
@@ -23,8 +32,8 @@
 		height: none;
 	}
 	div.grow p { flex-grow: 1; }
-</style><section>
-	<h2>flex-box</h2>
+</style></head><body>
+	<h2>framework flex-box</h2>
 	<div><p></p><p></p><p></p><p></p><p></p><p></p></div>
 	<xmp>div {
 	display: flex;
@@ -50,4 +59,5 @@
 	<p>flex-direction: column; flex-wrap: wrap; également wrap-reverse.</p>
 	<div><p></p><p></p><p></p><p></p><p></p><p style='height:1em;align-self:flex-end'></p></div>
 	<p>align-self: flex-end; pour un carré interne ayant une hauteur.</p>
-</section>
+	<a href='index.html'>revenir au sommaire</a>
+</body></html>
