--- a/model-css basique/page-general.html
+++ b/model-css basique/page-general.html
@@ -1,5 +1,14 @@
+<!DOCTYPE html><html><head>
+	<title>formulaire - notes de css</title>
+	<meta name='viewport' content='width=device-width,initial-scale=1'/>
+	<meta charset='utf-8'/>
+	<link rel='icon' type='image/x-icon' href='../../site-dp/data/nounours-perso.svg'/>
+	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/structure.css'/>
+	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/perso.css' media='screen'/>
+	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/shapes.css'/>
+	<link rel='stylesheet' type='text/css' href='base.css'/>
 <style type='text/css'>
-	section {
+	body {
 		display: grid;
 		grid-auto-flow: column;
 		grid-template-rows: 2em 1fr 1fr 3em;
@@ -20,7 +29,7 @@
 	}
 	h2 { grid-column: 1/5; }
 	p:after { content: '.'; }
-</style><section>
+</style></head><body>
 	<h2>le positionnement</h2>
 	<div><span style='position:static'></span></div>
 <xmp>div {
@@ -47,4 +56,5 @@
 	+ top, left, right, bottom;
 }</xmp>
 	<p>relative positionne le carré par rapport à son conteneur</p>
-</section>
+	<a href='index.html'>revenir au sommaire</a>
+</body></html>
