--- a/model-css basique/page-image.html
+++ b/model-css basique/page-image.html
@@ -1,9 +1,18 @@
+<!DOCTYPE html><html><head>
+	<title>image - notes de css</title>
+	<meta name='viewport' content='width=device-width,initial-scale=1'/>
+	<meta charset='utf-8'/>
+	<link rel='icon' type='image/x-icon' href='../../site-dp/data/nounours-perso.svg'/>
+	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/structure.css'/>
+	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/perso.css' media='screen'/>
+	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/shapes.css'/>
+	<link rel='stylesheet' type='text/css' href='base.css'/>
 <style type='text/css'>
 	img.img-resize {
 		width: 400px;
 		height: 200px;
 	}
-</style><section>
+</style></head><body>
 	<h2>les images et les liens</h2>
 	<img src='exemple-img.bmp' alt='une forme géométrique'>
 	<p>les attributs src et alt sont obligatoire. par défaut, laisser alt vide.</p>
@@ -27,4 +36,5 @@
 	<xmp><base target='_blank' href='C:/Users/deborah.powers/Desktop/articles/'/></xmp>
 	<p>base pré-écrit des infos pour les liens et les images. on le met dans le head.</p>
 	<p>valeurs de href: # désactiver le lien, #id un élément de la page qui a pour id id, http://www.truc.fr/ une page web, c://truc/machin.html un fichier (ou un dossier) local.</p>
-</section>
+	<a href='index.html'>revenir au sommaire</a>
+</body></html>
