--- a/model-css basique/page-shape.html
+++ b/model-css basique/page-shape.html
@@ -2,10 +2,10 @@
 	<title>forme - notes de css</title>
 	<meta name='viewport' content='width=device-width,initial-scale=1'/>
 	<meta charset='utf-8'/>
-	<link rel='icon' type='image/x-icon' href='///C:\Users\dpowers-consultant01\Desktop\site-deborah\data\nounours-perso.svg'/>
-	<link rel='stylesheet' type='text/css' href='///C:\Users\dpowers-consultant01\Desktop\site-deborah\library-css\structure.css'/>
-	<link rel='stylesheet' type='text/css' href='///C:\Users\dpowers-consultant01\Desktop\site-deborah\library-css\perso.css' media='screen'/>
-	<link rel='stylesheet' type='text/css' href='///C:\Users\dpowers-consultant01\Desktop\site-deborah\library-css\shapes.css'/>
+	<link rel='icon' type='image/x-icon' href='../../site-dp/data/nounours-perso.svg'/>
+	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/structure.css'/>
+	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/perso.css' media='screen'/>
+	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/shapes.css'/>
 	<link rel='stylesheet' type='text/css' href='base.css'/>
 </head><body class='list3'>
 	<h2>les formes</h2>
@@ -20,5 +20,4 @@
 	<div><p>cylindre.horizontal</p><cylindre class='horizontal'><p></p><p></p></cylindre></div>
 	<div><p>cylindre.tourne</p><cylindre class='tourne'><p></p><p></p></cylindre></div>
 	<a href='index.html'>revenir au sommaire</a>
-	<script type='text/javascript' src='test.js'></script>
 </body></html>
