--- a/model-css basique/index.html
+++ b/model-css basique/index.html
@@ -2,10 +2,10 @@
 	<title>notes de css</title>
 	<meta name='viewport' content='width=device-width,initial-scale=1'/>
 	<meta charset='utf-8'/>
-	<link rel='icon' type='image/x-icon' href='///C:\Users\dpowers-consultant01\Desktop\site-deborah\data\nounours-perso.svg'/>
-	<link rel='stylesheet' type='text/css' href='///C:\Users\dpowers-consultant01\Desktop\site-deborah\library-css\structure.css'/>
-	<link rel='stylesheet' type='text/css' href='///C:\Users\dpowers-consultant01\Desktop\site-deborah\library-css\perso.css' media='screen'/>
-	<link rel='stylesheet' type='text/css' href='///C:\Users\dpowers-consultant01\Desktop\site-deborah\library-css\shapes.css'/>
+	<link rel='icon' type='image/x-icon' href='../../site-dp/data/nounours-perso.svg'/>
+	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/structure.css'/>
+	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/perso.css' media='screen'/>
+	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/shapes.css'/>
 	<link rel='stylesheet' type='text/css' href='base.css'/>
 </head><body>
 	<header>
@@ -13,8 +13,6 @@
 		<p>rappel: un grand titre par page</p>
 		<p>les feuilles de style: structure.css et perso.css</p>
 		<p>structure apporte l'affichage de base, perso les couleurs de la page.</p>
-		<a href='page-shape.html?url=///C:\Users\dpowers-consultant01\Desktop\site-deborah\'>test</a>
-		<a href='page-shape.html' data-url='///C:\Users\dpowers-consultant01\Desktop\site-deborah\'>test</a>
 		<section id='summary' style='border:none;text-align:center;'>
 			<a href='page-anim.html'>animation</a>
 			<a href='page-back.html'>fond</a>
