--- a/bulles.html
+++ b/bulles.html
@@ -9,47 +9,51 @@
 	-->
 	<link rel='icon' type='image/svg+xml' href='../site-dp/data/nounours-perso.svg'/>
 	<link rel='stylesheet' type='text/css' href='../site-dp/library-css/structure.css'/>
-	<link rel='stylesheet' type='text/css' href='../site-dp/library-css/perso.css' media='screen'/>
 	<script type='text/javascript' src='../site-dp/library-js/drag-drop.js'></script>
 <style type='text/css'>
 	body {
 		width: 18cm;
 		height: 18cm;
 		padding: 10px;
+		background-color: black;
 	}
 	p {
 		width: 60px;
 		height: 60px;
 		margin: 0;
 		margin-bottom: 0;
-		border-radius: 10%;
-		background-color: green;
-		cursor: move;
+		border-radius: 50%;
+		background-image: radial-gradient(deeppink 10%, transparent 80%);
 		position: absolute;
-		left: 200px;
-		top: 60px;
-	}
-	p.drag {
-		background-color: cadetblue;
-		left: 200px;
+		left: 600px;
 		top: 260px;
-	}
-	p.obstacle {
-		background-color: var(--bord-color);
-		position: relative;
-		left: 300px;
-		top: 300px;
-	}
-	@keyframes moving-heart {
-		from {}
-		to {}
-		0% { background-color: red; }
-		50% { background-color: pink; }
 	}
 </style></head><body>
 	<p class='auto'></p>
-	<p class='drag'></p>
-	<p class='obstacle'></p>
+	<p class='auto'></p>
+	<p class='auto'></p>
+	<p class='auto'></p>
+	<p class='auto'></p>
+	<p class='auto'></p>
+	<p class='auto'></p>
+	<p class='auto'></p>
+	<p class='auto'></p>
+	<p class='auto'></p>
 </body><script type='text/javascript'>
+	const couleurs =[ 'orangered', 'purple', 'springgreen', 'cadetblue', 'deeppink', 'orange', 'teal', 'lightblue', 'magenta' ];
+Array.prototype.chooseRandomly = function() {
+	var pos = Math.random();
+	pos = pos * this.length;
+	pos = Math.floor (pos);
+	return this[pos];
+}
+HTMLElement.prototype.setPos = function(){
+	var posX = boundaries[0] + Math.floor (Math.random() * (boundaries[2] - boundaries[0]));
+	var posY = boundaries[1] + Math.floor (Math.random() * boundaries[3] - boundaries[1]);
+	this.style.left = posX +'px';
+	this.style.top = posY +'px';
+	this.style.backgroundImage = 'radial-gradient('+ couleurs.chooseRandomly() +' 10%, transparent 80%)';
+}
 	document.body.isContainer();
+	for (var c=0; c< document.body.children.length; c++) document.body.children[c].setPos();
 </script></html>
