--- a/sudoku va/sudoku-imprimable.html
+++ b/sudoku va/sudoku-imprimable.html
@@ -3,13 +3,13 @@
 	<meta name='viewport' content='width=device-width,initial-scale=1'/>
 	<meta charset='utf-8'/>
 	<!--
-	<base target='blank' href='../../site-dp/'/>
+	<base target='blank' href='file:///C:/Users/deborah.powers/site-dp/'/>
 	<base target='blank' href='/var/www/html/site-dp/'/>
 	<link rel='icon' type='image/svg+xml' href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' version='1.1' width='16' height='16'><circle cx='8' cy='8' r='6' style='fill:#FBD;stroke:#C36'/></svg>">
 	-->
-	<link rel='icon' type='image/svg+xml' href='../../site-dp/data/nounours-perso.svg'/>
-	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/structure.css'/>
-	<script type='text/javascript' src='../../site-dp/library-js/list.js'></script>
+	<link rel='icon' type='image/svg+xml' href='file:///C:/Users/deborah.powers/site-dp/data/nounours-perso.svg'/>
+	<link rel='stylesheet' type='text/css' href='file:///C:/Users/deborah.powers/site-dp/library-css/structure.css'/>
+	<script type='text/javascript' src='file:///C:/Users/deborah.powers/site-dp/library-js/list.js'></script>
 	<link rel='stylesheet' type='text/css' href='sudoku.css'/>
 <style type='text/css'>
 	body { text-align: center; }
@@ -17,4 +17,8 @@
 	<h1>grille de sudoku</h1>
 </body>
 	<script type='text/javascript' src='sudoku.js'></script>
-</html>
+<script type='text/javascript'>
+	function remplirUneCase (maCase, value){ maCase.innerHTML = value; }
+	function viderUneCase (maCase){ maCase.innerHTML =" "; }
+	afficher (remplirUneCase, viderUneCase);
+</script></html>
